# Modern-Cpp--Class-Materials

./: 01intro.cpp  02data_types.cpp  06interface_implement.cpp  LICENSE  README.md
00 Entrypoint/: main.cpp
03 Refrences/: main.cpp
04 Array/: main.cpp
05 Vector/: main.cpp
07 The meaning of iclude something/: main.cpp  main.ii
07the_meaning_to_iclude_something/: main.s
08 Compiling/: CMakeCache.txt  Makefile.template
08 Compiling/compiling_multi_file_project/cmake/src/: main.cpp
08 Compiling/compiling_multi_file_project/makefile/: Makefile  README.md
08 Compiling/compiling_multi_file_project/terminal/: sum.h
08compiling/: CMakeLists.txt
08compiling/compiling_multi_file_project/cmake/: README.md
08compiling/compiling_multi_file_project/cmake/src/: CMakeLists.txt
09 Google test/src/: CMakeLists.txt  hello.cpp  tools.cpp  tools.h
09 Google test/tests/: CMakeLists.txt
09google_test_project/: CMakeLists.txt
09google_test_project/src/: hello.h  main.cpp
09google_test_project/tests/: test_sum.cpp
compiling_multi_file_project/: README.md
compiling_multi_file_project/cmake/: CMakeLists.txt
compiling_multi_file_project/cmake/src/: CMakeLists.txt  main.cpp
compiling_multi_file_project/cmake/src/sum/: CMakeLists.txt
compiling_multi_file_project/makefile/: Makefile  README.md  main.cpp  out  sum.h
compiling_multi_file_project/terminal/: README.md  a.out  note.md  sum.cpp
